# EduChatEval

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  mypythonpackage.py  objects.inv  pyproject.toml  run_diawrap.py  sitemap.xml  testing_mypython_package.ipynb
.github/workflows/: deploy.yml
about/: index.html
api/: index.html
api/api_frame_gen/: index.html
api/api_pred/: index.html
api/api_synth_int/: index.html
api/api_viz/: index.html
api/api_wrap_int/: index.html
data/: SMS_train.csv  tiny_labeled_data.csv
data/final_outputs/: biology_annotated_final.csv  english_annotated.csv  english_annotated_final.csv  english_annotated_withCertainty.csv  feedback_annotated_final.csv  first_annotated.csv  spanish_annotated_final.csv
data/generated_dialogue_data/: synth_biology_interaction.csv  synth_english_interaction.csv  synth_feedback_300.csv  synth_feedback_interaction5.csv  synth_spanish_interaction.csv
data/generated_tuning_data/: FINAL_synthetic_combined.json  FINAL_synthetic_combined500.csv  FINAL_synthetic_feedback.json  FINAL_synthetic_feedback1000_wfilters.csv  PACKAKGE_QUALDATA.csv  final_4types_800.csv  final_feedback_300.csv  final_qual_default.csv  final_quality_FEEDBACK1000_data.csv  final_quality_data500_NOTUNE.csv  final_quality_data500_TUNED.csv  (+5 more)
docs/: about.md  index.md  installation.md  mkdocs.yml
installation/: index.html
search/: search_index.json
src/: classification_utils.py
tutorials/: README.md  chat_wrap_instructions.md  default_demo.ipynb  feedback_demo.ipynb  intentions_demo.ipynb
user-guide/: index.html
(+79 files in other folders)
