[project]
name = "chat-wrap-package"
version = "0.1.0"
description = ""
authors = [
    {name = "LauraWulffPaaby",email = "202006161@post.au.dk"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "lmstudio (>=1.0.1,<2.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "accelerate (>=1.4.0,<2.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "optuna-integration (>=4.2.1,<5.0.0)",
    "outlines (>=0.2.1,<0.3.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "mlx-lm (>=0.22.2,<0.23.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "textual (>=3.0.1,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "ipywidgets (>=8.1.6,<9.0.0)",
    "notebook (>=7.4.0,<8.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)",
    "mkdocs-glightbox (>=0.4.0,<0.5.0)",
]

[tool.poetry]
packages = [{include = "chat_wrap_package", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"
mkdocstrings = "^0.29.1"
aiohttp = "<3.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
